--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -134,7 +134,7 @@
                 <h2>Table</h2>
             </header>
             <table>
-                <caption>Star Wars Trilogy Data</caption>
+                <caption><h3>Star Wars Trilogy Data</h3></caption>
                 <thead>
                   <tr>
                     <th scope="col">Title</th>
