--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -134,7 +134,7 @@
                 <h2>Table</h2>
             </header>
             <table>
-                <caption><h3>Star Wars Trilogy Data</h3></caption>
+                <caption><b>Star Wars Trilogy Data</b></caption>
                 <thead>
                   <tr>
                     <th scope="col">Title</th>
@@ -161,7 +161,7 @@
                 <tfoot>
                   <tr>
                     <th scope="row">
-                Star Wars: Episode VI - Return of the Jedi
+                    Star Wars: Episode VI - Return of the Jedi
                     </th>
                     <td>Richard Marquand</td>
                     <td>May 25th, 1983</td>
