--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -134,7 +134,7 @@
                 <h2>Table</h2>
             </header>
             <table>
-                <caption><b>Star Wars Trilogy Data</b></caption>
+                <caption>Star Wars Trilogy Dat</caption>
                 <thead>
                   <tr>
                     <th scope="col">Title</th>
