--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -134,7 +134,7 @@
                 <h2>Table</h2>
             </header>
             <table>
-                <caption>Star Wars Trilogy Dat</caption>
+                <caption>Star Wars Trilogy Data</caption>
                 <thead>
                   <tr>
                     <th scope="col">Title</th>
@@ -157,16 +157,14 @@
                         <td>Irvin Kershner</td>
                         <td>May 21st, 1980</td>
                     </tr>
+                    <tr>
+                        <th scope="row">
+                        Star Wars: Episode VI - Return of the Jedi
+                        </th>
+                        <td>Richard Marquand</td>
+                        <td>May 25th, 1983</td>
+                      </tr>
                 </tbody>
-                <tfoot>
-                  <tr>
-                    <th scope="row">
-                    Star Wars: Episode VI - Return of the Jedi
-                    </th>
-                    <td>Richard Marquand</td>
-                    <td>May 25th, 1983</td>
-                  </tr>
-                </tfoot>
               </table>
         </section>
     </main>
