--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -135,22 +135,24 @@
                     <h2>Latest news</h2>
                 </header>
                 <div>
-                    <article><p>Career</p>
-                        <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                    <article>
                         <div>
                             <img src="images/pic-blog-01.jpg" alt="" width="305" height="205">
                         </div>
+                        <p>Career</p>
+                        <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur 
                             adipiscing elit. Id Sextilius factum 
                             negabat. Quo tandem modo? At eum nihili 
                             facit; Quae contraria sunt his, malane?</p>
                         <small>By Kelly D.</small>
                         </article>
-                    <article><p>Digital Life</p>
-                        <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+                    <article>
                         <div>
                             <img src="images/pic-blog-02.jpg" alt="" width="305" height="205">
                         </div>
+                        <p>Digital Life</p>
+                        <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur 
                             adipiscing elit. Tum mihi Piso: Quid 
                             ergo? Tum ille: Ain tandem? Non autem 
@@ -159,11 +161,12 @@
                             agimus. An nisi populari fama?</p>
                         <small>By William A.</small>
                     </article>
-                    <article><p>Social</p>
-                        <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+                    <article>
                         <div>
                             <img src="images/pic-blog-03.jpg" alt="" width="305" height="205">
                         </div>
+                        <p>Social</p>
+                        <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur 
                             adipiscing elit. Non igitur bene. Quid 
                             enim est a Chrysippo praetermissum in 
