--- a/0x00-html_advanced/styleguide.html
+++ b/0x00-html_advanced/styleguide.html
@@ -211,7 +211,7 @@
                 <h2>Iframe</h2>
             </header>
             <div>
-                <iframe src="https://www.youtube.com/embed/41N6bKO-NVI" frameborder="0" width="350" height="200">Holberton School</iframe>
+                <iframe title="Holberton School " src="https://www.youtube.com/embed/41N6bKO-NVI" frameborder="0" width="350" height="200">Holberton Sally</iframe>
             </div>
         </section>
     </main>
